# imperium

./: .gitignore  README.md  pyproject.toml
imperium/: factory.py  pathstrider.py  templates.py  utils.py
