[project]
name = "imperium"
version = "0.1.0"
description = "Specifications for Pathstriders (Astral Express plugins)"
authors = [
    {name = "SnowHawkeye"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pluggy (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
